--- a/mindarc-nam/src/assets/main.css
+++ b/mindarc-nam/src/assets/main.css
@@ -1,5 +1,6 @@
 @import './base.css';
 
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -27,9 +28,9 @@ a,
     place-items: center;
   }
 
-  #app {
+  /* #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
-  }
+  } */
 }
