--- a/mindarc-nam/src/assets/main.css
+++ b/mindarc-nam/src/assets/main.css
@@ -1,20 +1,20 @@
 @import './base.css';
 
-
+/* 
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
-}
+} */
 
-a,
+/* a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
   padding: 3px;
-}
+} */
 
 @media (hover: hover) {
   a:hover {
@@ -23,10 +23,10 @@ a,
 }
 
 @media (min-width: 1024px) {
-  body {
+  /* body {
     display: flex;
     place-items: center;
-  }
+  } */
 
   /* #app {
     display: grid;
