--- a/mindarc-nam/src/assets/base.css
+++ b/mindarc-nam/src/assets/base.css
@@ -14,18 +14,6 @@
   --color-text: var(--color-white);
 
   --mindarc-hero-bg: rgba(54, 54, 54, 0.5);
-
-  /* --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
-
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
-
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
-
-  --section-gap: 160px; */
 }
 
 html {
@@ -51,21 +39,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: var(--color-text);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    /* --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2); */
-  }
+  color: var(--color-primary);
 }
 
 *,
